# pico-gameboy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-release-on-tag.yml
boards/: murmulator.h  murmulator2.h
drivers/audio/: CMakeLists.txt  audio.c
drivers/graphics/: graphics.h
drivers/hdmi/: hdmi.c
drivers/i2s/: CMakeLists.txt  i2s.c
drivers/nespad/: CMakeLists.txt  nespad.cpp  nespad.h  nespad.pio
drivers/ps2/: CMakeLists.txt  ps2 (2).c  ps2.c  ps2.h
drivers/ps2kbd/: CMakeLists.txt
drivers/st7789/: st7789.c
drivers/tv/: tv.c
drivers/tv-software/: tv-software.c
drivers/usb/: msc_disk.c  usb.c  usb.h
drivers/usbfs/: CMakeLists.txt  README.md
drivers/vga/: vga.cpp  vga_config.h  vga_vmode.cpp  vga_vmode.h
drivers/vga-nextgen/: vga.c
drivers/ws2812/: CMakeLists.txt
ext/minigb_apu/: minigb_apu.c  minigb_apu.h
inc/: gbcolors.h  peanut_gb.h
src/: main.cpp
